--- a/style.css
+++ b/style.css
@@ -1,20 +1,69 @@
+
+table{
+    border-collapse: collapse;
+    margin-left: auto;
+  margin-right: auto;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    width: 500px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+table thead tr {
+    background-color: #009879;
+    color: #ffffff;
+    text-align: left;
+}
+table th,
+table td {
+    padding: 12px 15px;
+}
+h5{
+  font-size: 0.9em;
+  font-family: sans-serif;
+}
+table tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+}
+
+table tbody tr:last-of-type {
+    border-bottom: 2px solid #009879;
+}
+table tbody tr.active-row {
+    font-weight: bold;
+    color: #009879;
+}
 ol {
   list-style-type: none;
   margin: 0;
   padding: 0;
   width: 25%;
-  background-color: #5161ce;
+  background-color: #009879;
   height: 100%;
   position: fixed;
   overflow: auto;
   display: block;
 }
-body{
+.Effects:link, .Effects:visited{
+  background-color: black;
+  color: red;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+.Effects:hover, .Effects:active{
+  background-color: white;
+}
+.divv{
   margin: 0;
 }
 ol a{
   text-decoration: none;
-  color: #fff;
+  color: black;
   font-size: 18px;
   letter-spacing: 2px;
   display: block;
@@ -24,4 +73,16 @@ ol a{
 }
 ol a:hover{
   background-color: grey;
+}
+.water{
+  background-color:#66D3FA;
+}
+.industrial{
+  background-color: #795548;
+}
+.Air{
+  background-color: #757575;
+}
+.soil{
+  background-color: #43a047;
 }
